force-app/main/default/objects/Epic__c/Epic__c.object-meta.xml
<CustomObject>
    <label>Epic</label>
    <nameField>
        <displayFormat>E{0000000}</displayFormat>
        <label>Epic Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Epics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>