force-app/main/default/objects/Epic__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Epics</relationshipLabel>
    <relationshipName>Epics</relationshipName>
    <type>Lookup</type>
</CustomField>