force-app/main/default/objects/Epic__c/fields/Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason__c</fullName>
    <label>Cancelled Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>