force-app/main/default/objects/Epic__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Epics</relationshipLabel>
    <relationshipName>Epics</relationshipName>
    <type>Lookup</type>
</CustomField>