force-app/main/default/objects/Epic__c/fields/Technical_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Technical_Assumptions__c</fullName>
    <label>Technical Assumptions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>