force-app/main/default/objects/Epic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Epic_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Release__c</columns>
    <columns>Application__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>